--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Password Generator</h1>
+      <h1 id="headerH1">Password Generator</h1>
     </header>
     <div class="card">
       <div class="card-header" id="card-header">
-        <h2>Generate a Password</h2>
+        <h2 id="headerH2">Generate a Password</h2>
       </div>
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
